// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/ErrorMessage Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
  >
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       lang="nb"
       data-testid="123ID"
       aria-live="assertive"
       aria-atomic="true"
  >
    <div class="ErrorMessage_errorMessage__508oW dummyClassname">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
      <p class="ErrorMessage_errorMessageText__e27TU">
        Feilmelding
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="errorMessageContainer">
    <div class>
      <label for="textFieldTextboxId-:r3:"
             class="TextField_label__K0isy  undefined"
      >
        <span class>
          Label
        </span>
      </label>
      <input id="textFieldTextboxId-:r3:"
             class="TextField_textbox__qbZlk    undefined"
             aria-describedby="errorId"
             value
      >
      <div id="textFieldErrorId-:r2:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
    <div id="errorId"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Dette blir en veldig lang feilmelding for å teste om du oppfører seg om den skal.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <div class="errorMessageContainer">
    <div class>
      <label for="textFieldTextboxId-:r6:"
             class="TextField_label__K0isy  undefined"
      >
        <span class>
          Label
        </span>
      </label>
      <input id="textFieldTextboxId-:r6:"
             class="TextField_textbox__qbZlk    undefined"
             aria-describedby="errorId"
             value
      >
      <div id="textFieldErrorId-:r5:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Detteblirenveldiglangfeilmeldingforåtesteomduoppførersegomdenskal.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithPElement play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
  >
    <div class="ErrorMessage_errorMessage__508oW ">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
      <p class="ErrorMessage_errorMessageText__e27TU">
        Feilmelding
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
       id="dummyIdForwardedFromRef"
  >
  </div>
</div>
`;
